--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,13 @@
 <div>
-   <h1>Listado de Productos</h1>
+   <h1>Bienvenido {{user.name}}</h1>
+   <h2>{{user.email}}</h2>
+   {{#if user.is_admin}}
+   <h2>Rol: Administrador</h2>
+   {{else}}
+   <h2>Rol: Usuario {{user.is_admin}}</h2>
+   {{/if}}
+    <a href="/api/sessions/logout"><button>Salir</button></a>
+   <h2>Listado de Productos</h2>
 
    <div>
       <ul>
