BCrypt implementado correctamente

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
    {{#if user.is_admin}}
    <h2>Rol: Administrador</h2>
    {{else}}
-   <h2>Rol: Usuario {{user.is_admin}}</h2>
+   <h2>Rol: Usuario</h2>
    {{/if}}
     <a href="/api/sessions/logout"><button>Salir</button></a>
    <h2>Listado de Productos</h2>
