Log in con GitHub implementado

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,6 +8,9 @@
         <input name="password" type="password">
         <input type="submit">
     </form>
+    <div>
+        <a href="/api/sessions/github"><button>Entrar con GitHub</button></a>
+    </div>
     <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
 </div>
 <script src="/js/login.js"></script>
